# kinugasa-mocap

./: .dockerignore  .gitignore  Cargo.toml  README.md  compose.yaml  flake.nix  rust-toolchain.nix  rust-toolchain.toml  treefmt.nix
.github/workflows/: format.yml
docs/: default.nix  doc-of-docs.md
docs/api/: recording-console-api.yaml
docs/architecture/: overview.puml  recording_console_db.puml
docs/design-notes/: 260430_rist-poc.md  260430_setup-architecture-overview.md  260504_on-memory-mock-of-reconcilation-engine.md
docs/design-notes-ongoing/: on-memory-mock-of-reconcilation-engine.md  rist-poc.md  setup-architecture-overview.md
poc/rist-streaming/: .env.example  README.md  compose.yaml
poc/rist-streaming/config/: ingress-rtmp.json  ingress.yaml  livekit.yaml
poc/rist-streaming/ffmpeg/: Dockerfile  camera-testsrc.sh  camera-v4l2.sh  check-ffmpeg.sh  rist-server.sh
poc/rist-streaming/scripts/: check.sh  create-ingress.sh  token.sh  (+4 more)
server/hakari/: Cargo.toml
server/kinugasa-core/: Cargo.toml
server/kinugasa-gst/: Cargo.toml
server/kinugasa-infra/: Cargo.toml
server/kinugasa-recording-capture-app/: Cargo.toml  Dockerfile
server/kinugasa-recording-console-app/: Cargo.toml  Dockerfile
server/kinugasa-rist/: Cargo.toml
server/kinugasa-test-tools/: Cargo.toml
server/librist/: Cargo.toml  build.rs
tests/: runtime.Dockerfile
tests/test-of-kinugasa-gst-rist-failure/: compose.yaml
tests/test-of-kinugasa-gst-rist-success/: compose.yaml
tests/test-of-protocol-e2e-failure/: compose.yaml
tests/test-of-protocol-e2e-success/: compose.yaml
(+63 files in other folders)
