[workspace]
members = ["server/*"]
resolver = "2"

[workspace.package]
edition = "2024"
publish = false
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.99"
thiserror = "2.0.15"
uuid = { version = "1.22.0", features = ["serde"] }
chrono = "0.4.43"
rstest = "0.26.0"
async-trait="0.1.88"
serde = { version = "1.0.228", features = ["derive"] }
bindgen = "0.72.1"
tempfile = "3.27.0"