[workspace]
members = ["server/*"]
resolver = "2"

[workspace.package]
edition = "2024"
publish = false
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.99"
thiserror = "2.0.15"
uuid = { version = "1.22.0", features = ["serde", "v4"] }
chrono = { version = "0.4.43", features = ["serde"] }
rstest = "0.26.0"
async-trait="0.1.88"
serde = { version = "1.0.228", features = ["derive"] }
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread"] }
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "mysql",
    "chrono",
] }
bindgen = "0.72.1"
tempfile = "3.27.0"
